k8s-security-framework/policies/pod-security/KSP-POD-013/tests/exception-resource.yaml
apiVersion: v1
kind: Pod
metadata:
  name: ksp-pod-013-exception
  namespace: policy-test
spec:
  securityContext:
    runAsUser: 0
  containers:
    - name: demo-api
      image: harbor.example.com/demo-api:1.0.0
