k8s-security-framework/policies/pod-security/KSP-POD-013/tests/exception-resources-with-policy-violation.yaml
apiVersion: v1
kind: Pod
metadata:
  name: ksp-pod-013-exception
  namespace: policy-test
spec:
  securityContext:
    runAsUser: 0
  containers:
  - name: demo-api
    image: harbor.example.com/demo-api:1.0.0
---
apiVersion: v1
kind: Pod
metadata:
  name: ksp-pod-013-exception-secondary
  namespace: policy-test
spec:
  securityContext:
    runAsUser: 0
  containers:
  - name: demo-api
    image: harbor.example.com/demo-api:1.0.0
---
apiVersion: v1
kind: Pod
metadata:
  name: ksp-pod-013-exception-tertiary
  namespace: policy-test
spec:
  containers:
  - name: secure
    image: harbor.example.com/demo-api:1.0.0
    securityContext:
      runAsUser: 1000
  ephemeralContainers:
  - name: debugger
    image: harbor.example.com/demo-api:1.0.0
    command:
    - sh
    securityContext:
      runAsUser: 0
